Firebase storage integration Apply wallpaper logic complete

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">VividVista</string>
+    <string name="title_activity_wallpaper_full_screen">WallpaperFullScreenActivity</string>
 </resources>
